--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ci_rspec_process_total: [4]
-        ci_rspec_process_index: ['0,1', '2,3']
+        ci_node_index: [0, 1]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,16 +34,46 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - name: Download JUnit XML reports for default branch
+        uses: dawidd6/action-download-artifact@v5
+        with:
+          name: junit-xml-reports-[0-9]+
+          name_is_regexp: true
+          path: ${{ runner.temp }}/default-branch-junit-xml-reports
+          branch: ${{ github.event.repository.default_branch }}
+          workflow_conclusion: success
+        continue-on-error: true
+      - name: Split tests by timings
+        uses: r7kamura/split-tests-by-timings@v0
+        id: split-tests
+        with:
+          reports: ${{ runner.temp }}/default-branch-junit-xml-reports
+          glob: spec/**/*_spec.rb
+          index: ${{ matrix.ci_node_index }}
+          total: ${{ env.CI_NODE_TOTAL }}
       - name: Setup DB
         run: bundle exec rails "parallel:setup[${CI_NODE_CPU_CORES}]"
       - name: Run rspec in parallel
-        run: bundle exec parallel_rspec -n ${{ matrix.ci_rspec_process_total }} --only-group ${{ matrix.ci_rspec_process_index }}
+        run: bundle exec parallel_rspec -n $CI_NODE_CPU_CORES ${{ steps.split-tests.outputs.paths }}
       - name: Upload coverage/.resultset.json
         uses: actions/upload-artifact@v4
         with:
           name: coverage-resultset-json-${{ matrix.ci_node_index }}
           path: coverage/.resultset.json
           include-hidden-files: true
+      - name: Upload JUnit XML reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: junit-xml-reports-${{ matrix.ci_node_index }}
+          path: test_results
+          if-no-files-found: ignore
+      - name: Upload spec/examples.txt
+        if: ${{ success() || failure() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: examples-${{ matrix.ci_node_index }}
+          path: spec/examples.txt
+          if-no-files-found: ignore
 
   report-coverage:
     needs: test
