Re-run failed tests only

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,9 +34,37 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - name: Download previous test result
+        uses: actions/download-artifact@v4
+        with:
+          pattern: test-result-${{ matrix.ci_node_index }}
+          path: ${{ runner.temp }}
+      - name: Place previous test result
+        id: previous-test-result
+        run: |
+          if [ ! -e ${{ runner.temp }}/test-result-${{ matrix.ci_node_index }}/test_results ]; then
+            exit 0
+          fi
+          echo "failed-tests-only=true" >> $GITHUB_OUTPUT
+          if [ -f ${{ runner.temp }}/test-result-${{ matrix.ci_node_index }}/spec/examples.txt ]; then
+            mv ${{ runner.temp }}/test-result-${{ matrix.ci_node_index }}/spec/examples.txt spec/examples.txt
+            sudo chown runner:runner spec/examples.txt
+          fi
+          if [ -e ${{ runner.temp }}/test-result-${{ matrix.ci_node_index }}/test_results ]; then
+            mkdir -p test_results
+            mv ${{ runner.temp }}/test-result-${{ matrix.ci_node_index }}/test_results/* test_results/
+            find test_results -type f -name "*.xml" | sed 'p;s/.xml/_prev.xml/' | xargs -n2 mv
+            bundle exec rails runner "Dir.glob('test_results/**/*.xml').each { |path| File.write(path, Nokogiri(File.read(path)).tap { _1.css('testcase:has(failure)').remove }.to_s) }"
+          fi
+          if [ -e ${{ runner.temp }}/test-result-${{ matrix.ci_node_index }}/coverage ]; then
+            mkdir -p coverage
+            mv ${{ runner.temp }}/test-result-${{ matrix.ci_node_index }}/coverage/.resultset*.json coverage/
+            find coverage -type f -name "*.json" | sed 'p;s/.json/_prev.json/' | xargs -n2 mv
+          fi
       - name: Setup DB
         run: bundle exec rails "parallel:setup[${CI_NODE_CPU_CORES}]"
       - name: Download all test results for default branch
+        if: ${{ !steps.previous-test-result.outputs.failed-tests-only }}
         uses: dawidd6/action-download-artifact@v5
         with:
           name: test-result-[0-9]+
@@ -46,6 +74,7 @@ jobs:
           workflow_conclusion: success
         continue-on-error: true
       - name: Split tests by timings
+        if: ${{ !steps.previous-test-result.outputs.failed-tests-only }}
         uses: r7kamura/split-tests-by-timings@v0
         id: split-tests
         with:
@@ -54,13 +83,18 @@ jobs:
           index: ${{ matrix.ci_node_index }}
           total: ${{ env.CI_NODE_TOTAL }}
       - name: Run rspec in parallel
+        if: ${{ !steps.previous-test-result.outputs.failed-tests-only }}
         run: bundle exec parallel_rspec -n ${CI_NODE_CPU_CORES} ${{ steps.split-tests.outputs.paths }}
+      - name: Re-run rspec only failures
+        if: ${{ steps.previous-test-result.outputs.failed-tests-only }}
+        run: bundle exec rspec --only-failures
       - name: Upload test result
         if: ${{ success() || failure() }}
         uses: actions/upload-artifact@v4
         with:
           name: test-result-${{ matrix.ci_node_index }}
           path: |
+            spec/examples.txt
             test_results/
             coverage/.resultset*.json
           include-hidden-files: true
