Re-run failed tests only

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,9 +33,38 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - name: Download previous test result
+        uses: actions/download-artifact@v4
+        with:
+          pattern: test-result-${{ matrix.test_job_index }}
+          path: ${{ runner.temp }}
+      - name: Place previous test result
+        id: previous-test-result
+        run: |
+          if [ ! -e ${{ runner.temp }}/test-result-${{ matrix.test_job_index }}/test_results ]; then
+            exit 0
+          fi
+          echo "failed-tests-only=true" >> $GITHUB_OUTPUT
+          suffix="_`date +%s`"
+          if [ -f ${{ runner.temp }}/test-result-${{ matrix.test_job_index }}/spec/examples.txt ]; then
+            mv ${{ runner.temp }}/test-result-${{ matrix.test_job_index }}/spec/examples.txt spec/examples.txt
+            sudo chown runner:runner spec/examples.txt
+          fi
+          if [ -e ${{ runner.temp }}/test-result-${{ matrix.test_job_index }}/test_results ]; then
+            mkdir -p test_results
+            mv ${{ runner.temp }}/test-result-${{ matrix.test_job_index }}/test_results/* test_results/
+            find test_results -type f -name "*.xml" | sed "p;s/.xml/${suffix}.xml/" | xargs -n2 mv
+            bundle exec rails runner "Dir.glob('test_results/**/*.xml').each { |path| File.write(path, Nokogiri(File.read(path)).tap { _1.css('testcase:has(failure)').remove }.to_s) }"
+          fi
+          if [ -e ${{ runner.temp }}/test-result-${{ matrix.test_job_index }}/coverage ]; then
+            mkdir -p coverage
+            mv ${{ runner.temp }}/test-result-${{ matrix.test_job_index }}/coverage/.resultset*.json coverage/
+            find coverage -type f -name "*.json" | sed "p;s/.json/${suffix}.json/" | xargs -n2 mv
+          fi
       - name: Setup DB
         run: bundle exec rails "parallel:setup[`nproc`]"
       - name: Download all test results for default branch
+        if: ${{ !steps.previous-test-result.outputs.failed-tests-only }}
         uses: dawidd6/action-download-artifact@v5
         with:
           name: test-result-*
@@ -45,6 +74,7 @@ jobs:
           workflow_conclusion: success
           if_no_artifact_found: warn
       - name: Split tests by timings
+        if: ${{ !steps.previous-test-result.outputs.failed-tests-only }}
         uses: r7kamura/split-tests-by-timings@v0
         id: split-tests
         with:
@@ -53,7 +83,11 @@ jobs:
           index: ${{ matrix.test_job_index }}
           total: ${{ env.TEST_JOB_PARALLEL_COUNT }}
       - name: Run rspec in parallel
+        if: ${{ !steps.previous-test-result.outputs.failed-tests-only }}
         run: bundle exec parallel_rspec -n `nproc` ${{ steps.split-tests.outputs.paths }}
+      - name: Re-run rspec only failures
+        if: ${{ steps.previous-test-result.outputs.failed-tests-only }}
+        run: bundle exec rspec --only-failures
       - name: Upload test result
         if: ${{ success() || failure() }}
         uses: actions/upload-artifact@v4
@@ -61,6 +95,7 @@ jobs:
           name: test-result-${{ matrix.test_job_index }}
           path: |
             test_results/
+            spec/examples.txt
             coverage/.resultset*.json
           include-hidden-files: true
           if-no-files-found: ignore
