--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -126,6 +126,7 @@ jobs:
         with:
           name: coverage
           path: coverage
+          include-hidden-files: true
 
   report-failed-tests:
     needs: test
