--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -221,11 +221,11 @@ jobs:
         env:
           JUNIT_XML_FILE_PATH_PATTERN: ${{ runner.temp }}/merged_rspecs/**/*.xml
         run: |
-          bundle exec ruby scripts/generate_test_summary_junit_xml.rb > ${{ runner.temp }}/test_summary.xml
+          bundle exec ruby scripts/generate_test_summary_junit_xml.rb > ${{ runner.temp }}/summary_rspec.xml
       - name: Report test summary
         uses: mikepenz/action-junit-report@v5
         with:
-          report_paths: ${{ runner.temp }}/test_summary.xml
+          report_paths: ${{ runner.temp }}/summary_rspec.xml
           check_name: RSpec
           summary: true
           flaky_summary: true
