--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -108,6 +108,7 @@ jobs:
     timeout-minutes: 5
     permissions:
       contents: read
+      actions: read
       pull-requests: write
     if: ${{ success() || failure() }}
     steps:
@@ -132,6 +133,8 @@ jobs:
           name: coverage
           path: coverage
           include-hidden-files: true
+      - name: Coverage Diff
+        uses: ./.github/actions/coverage-diff
 
   report-failed-tests:
     needs: test
