--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,12 +16,34 @@ defaults:
     shell: bash
 
 jobs:
+  retrieve-latest-successful-run-id:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      contents: read
+      actions: read
+    env:
+      GH_TOKEN: ${{ github.token }}
+    steps:
+      - name: Retrieve latest successful run ID for default branch
+        id: fetch-run-id
+        run: |
+          gh api \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "/repos/${GITHUB_REPOSITORY}/actions/workflows/test.yml/runs?branch=${{ github.event.repository.default_branch }}&status=success&per_page=1" | \
+            jq -r '"run-id=\(.workflow_runs[0].id)"' >> $GITHUB_OUTPUT
+    outputs:
+      run-id: ${{ steps.fetch-run-id.outputs.run-id }}
+
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     permissions:
       contents: read
       actions: read
+    needs:
+      - retrieve-latest-successful-run-id
     strategy:
       fail-fast: false
       matrix:
@@ -72,8 +94,7 @@ jobs:
           name: test-result-*
           name_is_regexp: true
           path: ${{ runner.temp }}/default-branch-test-results
-          branch: ${{ github.event.repository.default_branch }}
-          workflow_conclusion: success
+          run_id: ${{ needs.retrieve-latest-successful-run-id.outputs.run-id }}
           if_no_artifact_found: warn
       - name: Split tests by timings
         if: ${{ !steps.previous-test-result.outputs.failed-tests-only }}
