--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -231,8 +231,8 @@ jobs:
         working-directory: ${{ runner.temp }}
         run: |
           mkdir merged_rspecs artifacts
-          gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" "/repos/${GITHUB_REPOSITORY}/actions/runs?branch=${{ github.event.repository.default_branch }}&per_page=5" | \
-            jq -r '.workflow_runs[] | .id' | \
+          gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" "/repos/${GITHUB_REPOSITORY}/actions/workflows/test.yml/runs?branch=${{ github.event.repository.default_branch }}&per_page=30" | \
+            jq -r '.workflow_runs | map(select(.conclusion == "success" or .conclusion == "failure" or .conclusion == null))[0:20] | .[].id' | \
             while read run_id; do
               gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${GITHUB_REPOSITORY}/actions/runs/${run_id}/artifacts | \
                 jq -r '.artifacts[] | select(.name == "merged_rspec") | .id' | \
@@ -253,7 +253,6 @@ jobs:
           check_name: RSpec
           summary: true
           flaky_summary: true
-          skip_annotations: true
 
   build-github-pages:
     needs: report-coverage
